[package]
name = "lazy-pbar"
version = "0.1.1"
edition = "2021"
authors = ["Joseph Yudelson"]
description = "An extremely lazy interface for indicatif, simplifying my one use case (Wrapping an iterator)"
repository = "https://github.com/JYudelson1/lazy-pbar"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"